Ambient Music Ticker - Allow to pulse on new tracks [1/2]
* @neobuddy89: Forward Port to Android 11/12

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

* @Albinoman887: Port to Spark

Signed-off-by: Matt Filetto <matt.filetto@gmail.com>

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -377,6 +377,8 @@
     <!-- OmniJaws -->
     <uses-permission android:name="org.omnirom.omnijaws.READ_WEATHER" />
 
+    <protected-broadcast android:name="com.android.systemui.doze.pulse" />
+
     <application
         android:name=".SystemUIApplication"
         android:persistent="true"
